# security-specs

./: .gitreview  README.rst  requirements.txt  setup.cfg  tox.ini
doc/source/: conf.py  contributing.rst  index.rst
specs/kilo/anchor/: seperate-validator-functionality.rst
specs/mitaka/bandit/: config-change.rst
specs/mitaka/killick/: template.rst
