[metadata]
name = security-specs
summary = OpenStack Security Specifications
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[pbr]
warnerrors = True

[upload_sphinx]
upload-dir = doc/build/html
